# kio-afp

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  NEWS  README.md  sonar-project.properties
.github/workflows/: build.yml  code_analysis.yml
po/: en_GB.po  sv_SE.po
po/en_GB/: kio-afp.po
po/sv_SE/: kio-afp.po
src/: CMakeLists.txt  afp.json  afp_connect.cpp  afploginwidget.cpp  afploginwidget.h  kafp_worker.cpp  kio_afp_plugin.cpp
test/: test_kioclient.sh
tests/integration/: test_afp_connect.sh  test_afp_get_stat.sh
